ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncDeclare_es5/input.ts.stderr
error[1042]: `async` modifier cannot be used here.
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncDeclare_es5/input.ts:4:9
  |
4 | declare async function foo(): Promise<void>;
  |         ^^^^^

